--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Muhammad Ghalib S.m</title>
 </head>
 <body>
-	<table>
 		<table>
 			<tr>
 				<td>
-					<img src="123.jpg" alt="art" style="width:200px;height:150px;" ">
+					<img src="123.jpg" alt="art" style="width:200px;height:150px;">
 				</td>
 				<td>
 					<h2>Muhammad Ghalib S.M (D121171005)</h2>
