--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
+	<title>contact</title>
 </head>
 <body>
 	<h1>My Kontak Detail</h1>
@@ -11,7 +11,7 @@
 
 	<hr>
 	<form>
-		<label>Tanggal :</label><br> <input type="Date" name="Date"><br>
+		<label>Tanggal :</label><br> <input type="date" name="date"><br>
 		<label>Your Name    :</label><br> <input type="Name" name="Name"><br>
 		<label>Your Email    :</label><br> <input type="Email" name="Email"><br>
 		<label>Your Massenger :</label><br>
