--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 	<hr>
 	<form>
-		<label>Tanggal :</label><br> <input type="date" name="date"><br>
+		<label>Data </label><br> <input type="Date" name="Date"><br>
 		<label>Your Name    :</label><br> <input type="Name" name="Name"><br>
 		<label>Your Email    :</label><br> <input type="Email" name="Email"><br>
 		<label>Your Massenger :</label><br>
