--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
 
 	<hr>
 	<form>
-		<label>Data </label><br> <input type="Date" name="Date"><br>
-		<label>Your Name    :</label><br> <input type="Name" name="Name"><br>
+		<label>Date </label><br> <input type="Date" name="Date"><br>
+		<label>Your Name    :</label><br> <input type="text" name="name"><br>
 		<label>Your Email    :</label><br> <input type="Email" name="Email"><br>
 		<label>Your Massenger :</label><br>
 		<textarea></textarea> <br>
-		<label>Color : </label> <input type="color" name="color"> <br><br>
+		<label>Color : </label> <input type="Color" name="Color"> <br><br>
 		<label>MALE</label> <input type="Radio" name="MALE"> 
 		<label>FAMALE</label> <input type="Radio" name="FAMALE"><br>
 
