--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,13 @@
 
 	<hr>
 	<form>
-		<label>Date </label><br> <input type="date" name="date"><br>
+
+		<label>date</label><br> <input type="date" name="date"><br>
 		<label>Your Name    :</label><br> <input type="text" name="name"><br>
 		<label>Your Email    :</label><br> <input type="Email" name="Email"><br>
 		<label>Your Massenger :</label><br>
 		<textarea></textarea> <br>
-		<label>Color : </label> <input type="color" name="color"> <br><br>
+		<label>color : </label> <input type="color" name="color"><br><br>
 		<label>MALE</label> <input type="Radio" name="MALE"> 
 		<label>FAMALE</label> <input type="Radio" name="FAMALE"><br>
 
