--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
 	<title>Muhammad Ghalib S.m</title>
+
+		
 </head>
 <body>
+		<style type="text/css">
+		{
+			background-color: red;
+
+		}
+		
+	</style>
 		<table>
 			<tr>
 				<td>
@@ -64,8 +73,6 @@
 
 
 
-
-	
 
 </body>
 </html>
