--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
 	<title>Muhammad Ghalib S.m</title>
-
+	<style type="text/css">
+		span {
+			border: 1px solid black;
+			background-color: rgb(0, 225, 213);
+		}
+		body {
+			background-color: currentColor;
+		}
+	</style>
 		
 </head>
 <body>
-		<style type="text/css">
-		{
-			background-color: red;
 
-		}
-		
-	</style>
 		<table>
 			<tr>
 				<td>
