--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<title>Muhammad Ghalib S.m</title>
 	<style type="text/css">
-		span {
-			border: 1px solid black;
-			background-color: rgb(0, 225, 213);
-		}
+
 		body {
-			background-color: currentColor;
+			background-color: red;
+		}
+		h2{
+			border: red;
 		}
 	</style>
 		
