--- a/index.html
+++ b/index.html
@@ -2,18 +2,28 @@
 <html lang="en">
 <head>
 	<title>Muhammad Ghalib S.m</title>
-		
+
+		<style type="text/css">
+		* { margin: 0; padding: 0; }
+        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(image/wal.jpg); }
+
+
+
+		</style>
 </head>
 <body>
 
-		<table>
+		<table id="satu">
 			<tr>
 				<td>
-					<img src="123.jpg" alt="art" style="width:200px;height:150px;">
+					<img src="image/123.jpg" alt="art" style="width:200px;height:150px;" id="pic">
 				</td>
 				<td>
-					<h2>Muhammad Ghalib S.M (D121171005)</h2>
-					<h5>Deskripsi Diri :</h5>
+					<h2 class="fn"> Muhammad Ghalib S.M <br></h2>
+					<h4><u>Deskripsi Diri</u></h4>
+					<p>
+						seseorang dengan komitmen jika kamu senang lakukan tapi ingat dengan tugas dan rumah kamu
+					 </p>
 				</td>
 			</tr>
 		</table>
@@ -28,8 +38,8 @@
 			<h3>Pendidikan :</h3>
 				<table style="width:25%"> 
 					<tr>
-    					<th>Tahun</th>
-    					<th>Sekolah</th>
+    					<td><b>Tahun<b/></td>
+    					<td><b>Sekolah</b></td>
     				</tr>
     				<tr>
     					<td>2005-2011</td>
