--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
 		<style type="text/css">
 		* { margin: 0; padding: 0; }
         body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(image/wal.jpg); }
+        #satu{
+        	color: red;
+        }
+
 
 
 
 		</style>
 </head>
-<body>
+<body id="satu">
 
-		<table id="satu">
+		<table>
 			<tr>
 				<td>
 					<img src="image/123.jpg" alt="art" style="width:200px;height:150px;" id="pic">
