--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h2 class="fn"> Muhammad Ghalib S.M <br></h2>
 					<h4><u>Deskripsi Diri</u></h4>
 					<p>
-						seseorang dengan komitmen jika kamu senang lakukan tapi ingat dengan tugas dan rumah kamu
+						Loading...
 					 </p>
 				</td>
 			</tr>
