--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		* { margin: 0; padding: 0; }
         body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(image/wal.jpg); }
         #satu{
-        	color: red; border: white;
+        	color: red;
+        	width: 900px; margin: 40px auto 70px;
         }
 
 
@@ -26,7 +27,7 @@
 					<h2 class="fn"> Muhammad Ghalib S.M <br></h2>
 					<h4><u>Deskripsi Diri</u></h4>
 					<p>
-						Loading..."Saya seorang profesional muda yang ramah dan bersemangat (bertanya kepada siapa saja), mencari karier yang sesuai dengan keterampilan profesional saya, kepribadian, dan kecenderungan membunuh. Kepala saya yang seperti cumi-cumi adalah pemecah masalah yang ahli dan menginspirasi rasa takut pada siapa yang memandangnya."
+						Loading..."Saya seorang profesional muda yang ramah dan bersemangat (bertanya kepada siapa saja), mencari karier yang sesuai dengan keterampilan profesional saya, kepribadian dan kecenderungan membunuh. Kepala saya yang seperti cumi-cumi adalah pemecah masalah yang ahli dan menginspirasi rasa takut pada siapa yang memandangnya."
 					 </p>
 				</td>
 			</tr>
