--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(image/wal.jpg); }
         #satu{
         	color: red;
-        	width: 900px; margin: 40px auto 70px;
+        	width: 800px; margin: 40px auto 70px;
+        }
+
+        hr{
+        	color: red;
         }
 
 
@@ -21,7 +25,7 @@
 		<table>
 			<tr>
 				<td>
-					<img src="image/123.jpg" alt="art" style="width:200px;height:150px;" id="pic">
+					<img src="image/satu.jpg" alt="art" style="width:120px;height:150px;" id="pic">
 				</td>
 				<td>
 					<h2 class="fn"> Muhammad Ghalib S.M <br></h2>
@@ -36,26 +40,26 @@
 		<hr>
 			<h3>Hoby :</h3>
 				<ul>
-					<li>Main Game</li>
-					<li>Baca Buku</li>
+					<p>Main Game</p>
+					<p>Baca Buku</p>
 				</ul>
 		<hr>
 			<h3>Pendidikan :</h3>
-				<table style="width:25%"> 
+				<table style="width:50%"> 
 					<tr>
     					<td><b>Tahun<b/></td>
     					<td><b>Sekolah</b></td>
     				</tr>
     				<tr>
-    					<td>2005-2011</td>
+    					<td>2005 - 2011</td>
     					<td>SD Inpres 1 palangga</td>
     				</tr>
     				<tr>
-    					<td>2011-2014</td>
+    					<td>2011 - 2014</td>
     					<td>SMPN 1 PALANGGA</td>
     				</tr>
     				<tr>
-    					<td>2014-2017</td>
+    					<td>2014 - 2017</td>
     					<td>SMAN 1 Takalar</td>
     				</tr>
     			</table>
