--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 					<td>******</td>
 				</tr>
 				<tr>
-					<td>IOS</td>
+					<td>C</td>
 					<td>*****</td>
 				</tr>
 				<tr>
-					<td>LOOK</td>
+					<td>WEB</td>
 					<td>****</td>
 				</tr>
 			</table>
