--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Muhammad Ghalib S.m</title>
 
-		<style type="text/css">
-		* { margin: 0; padding: 0; }
-        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(image/wal.jpg); }
-        #satu{
-        	color: red;
-        	width: 800px; margin: 40px auto 70px;
-        }
 
-        hr{
-        	color: red;
-        }
-
-
-
-
-		</style>
 </head>
 <body id="satu">
 
 		<table>
+				<h1 id="cv">Curiculum Vite</h1><br>
 			<tr>
 				<td>
 					<img src="image/satu.jpg" alt="art" style="width:120px;height:150px;" id="pic">
 				</td>
 				<td>
+
 					<h2 class="fn"> Muhammad Ghalib S.M <br></h2>
 					<h4><u>Deskripsi Diri</u></h4>
 					<p>
@@ -37,12 +25,14 @@
 			</tr>
 		</table>
 
-		<hr>
+		<hr> 
+		<div id="hobi">
 			<h3>Hoby :</h3>
 				<ul>
 					<p>Main Game</p>
 					<p>Baca Buku</p>
 				</ul>
+		</div>		
 		<hr>
 			<h3>Pendidikan :</h3>
 				<table style="width:50%"> 
